edge-trigger-color-spacing fix tray

--- a/elements/pfe-navigation/src/pfe-navigation.scss
+++ b/elements/pfe-navigation/src/pfe-navigation.scss
@@ -38,7 +38,7 @@ $nav-variables: (
 
   // Tray region
   tray: (
-    Padding: calc( #{pfe-var(container-padding)} * 4) // 64px
+    Padding: pfe-var(container-padding)
   ),
   
   // Logo
